// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /client-view 1`] = `
{
  "lines": 309,
  "modals": 4,
  "sha256": "15351268f00289778f4a4f2e0318f377ba595312ccbd93dc4154f4fdef037aec",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /client-view?portalId=44444444-4444-4444-8444-444444444444 1`] = `
{
  "lines": 533,
  "modals": 7,
  "sha256": "54cc3f4eddaf05cc0f14531f6a7a182870faf7f803031f2a3084c11b0d8edc03",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /managed-property 1`] = `
{
  "lines": 332,
  "modals": 4,
  "sha256": "e0a3a400d7cb12aa8c4f7824b1e987fd0ce00cd85fb1a332f6c1be7c35e68588",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /oac-meeting 1`] = `
{
  "lines": 395,
  "modals": 5,
  "sha256": "b2eeceb147e6447490c29c85c4982df8e1613e957f77c6d7f83bd7b89eb0c878",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /shared-schedule 1`] = `
{
  "lines": 311,
  "modals": 4,
  "sha256": "8ebdf4bb1e3243485cd422ca7143ba2d279a2318b21c548bf026e37dd155d825",
}
`;

exports[`lane X3 — batch F: the screens are unchanged on the iPhone (golden, iOS 390) /work-order 1`] = `
{
  "lines": 332,
  "modals": 4,
  "sha256": "e02b4bebd74b5a09f4464b62ad8d61289614f3ad91523d6505922103665f38f8",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-profile-setup — dark 1`] = `
{
  "lines": 118,
  "modals": 1,
  "sha256": "ab211b22bb13634e6f1500aab595e8b8d2e85710c378196380db78abc9968e0f",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-profile-setup — light 1`] = `
{
  "lines": 118,
  "modals": 1,
  "sha256": "a161585e296b1b08067989d586fe5459ee7cf87e033ee2938c399e8537695b07",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-project-report — dark 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "87559f42ff6d125d7196a063a8d932016c9bc2dd666630c4b4d932e0e08b03ee",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-project-report — light 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "fbee83e3bbe697b4f4fbe73a45a2fcacd53a118d680e219ca25c9e8eeffce9f5",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-quick-estimate — dark 1`] = `
{
  "lines": 204,
  "modals": 2,
  "sha256": "28374ee8cbcc07de51372dd18d9a5829813a7a7fb8822e9816b725e98206dfe0",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-quick-estimate — light 1`] = `
{
  "lines": 204,
  "modals": 2,
  "sha256": "22bade06ecfec67137da89208ce6969fc2a1029c6c1d6c15a326115003494e60",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-weekly-summary — dark 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "f3b959675f9c10faee3290e76c127dbf53cc3fc5a87d5fd3de48de0381198e59",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) ai-weekly-summary — light 1`] = `
{
  "lines": 34,
  "modals": 1,
  "sha256": "23222661bb4d72a453b2e9d75d914e5d4857eda908c702ada27bff657c070970",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) cash-flow-setup — dark 1`] = `
{
  "lines": 41,
  "modals": 1,
  "sha256": "728156a6546a555f21fc4020c6ac5a33006f72f397915bfc8f79535580971533",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) cash-flow-setup — light 1`] = `
{
  "lines": 41,
  "modals": 1,
  "sha256": "d61f92640259fd85fa19f97c8e353671d3399d4548684257956ac2c12f71267c",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-rfp-post — dark 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "17c5ded84d1cc1449ab650bbdb1f32df85afbd3e523fdfe8dc34afe74d6641ff",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-rfp-post — light 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "d4ddac6fc689568590365d2f44524fbe52c121ce69a3dafe52dfc749695e3479",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-subscription — dark 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "6b1502613b8fd0c01d2ed519411ef694c6c9c4b2b3df02f6f3c2f42857f4258d",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) client-paywall-subscription — light 1`] = `
{
  "lines": 173,
  "modals": 1,
  "sha256": "b670d157d47d3ae4b4dfa4dc9064818df345357af3affae8c097038034a46ba1",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) estimate-comparison — dark 1`] = `
{
  "lines": 36,
  "modals": 1,
  "sha256": "97e7d10cf0d5e6345202ffb908daaeabfa7383ecf47c6a7c26f1b0fd65e32b64",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) estimate-comparison — light 1`] = `
{
  "lines": 36,
  "modals": 1,
  "sha256": "4ce34f646a32baf8773b7ebb9edba6779dad268b5b5753e831eae84d8bbf7484",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) material-ai-estimate — dark 1`] = `
{
  "lines": 60,
  "modals": 1,
  "sha256": "44de245fcc36f05885798ea9f0ee04159340242aa55fd173ee202feab2834cf0",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) material-ai-estimate — light 1`] = `
{
  "lines": 60,
  "modals": 1,
  "sha256": "bdc737ce17c4cd13690ac7766819c27e1317a7be978d82b941767fcb33837127",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) productivity-calculator — dark 1`] = `
{
  "lines": 599,
  "modals": 1,
  "sha256": "796a5113b7c7e823cf477a1961387562a3966038abe544257f72a55a0d830052",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) productivity-calculator — light 1`] = `
{
  "lines": 599,
  "modals": 1,
  "sha256": "4e1482d46823a4e9e2bb87d75b6f122fa7030c96a681c60320b8bb4d72314771",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) rfi-triage — dark 1`] = `
{
  "lines": 29,
  "modals": 1,
  "sha256": "4fbfe65011d187f0afe49addb7db4f6aa6e93d2ee591234f68cdf3a9d2307d95",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) rfi-triage — light 1`] = `
{
  "lines": 29,
  "modals": 1,
  "sha256": "3720149b31c808a30195b80de3f18f0c08f72f7fe1144b69dd8294d0aa27a4a4",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) square-foot-estimator — dark 1`] = `
{
  "lines": 494,
  "modals": 1,
  "sha256": "029e92c10284552db3fbf03df484c7c35c34d96272f25691781df823d0b7a25a",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) square-foot-estimator — light 1`] = `
{
  "lines": 494,
  "modals": 1,
  "sha256": "eae9a048039d82cff138746ca1cbccdb9e342e377c37dff836169607291293b6",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) takeoff-page-inspector — dark 1`] = `
{
  "lines": 120,
  "modals": 1,
  "sha256": "8d216a58cb3d25aa0651093fdc6fc861130ba2d9c9bbaeacdb1ae79b675a1406",
}
`;

exports[`lane X3 — batches G + H: each tool alone is unchanged on the iPhone (golden, iOS 390) takeoff-page-inspector — light 1`] = `
{
  "lines": 120,
  "modals": 1,
  "sha256": "74c29b5be0315ae23c4a92f8e8388cd964a283e13d1aa67377c08ad8a2f785af",
}
`;
